--- a/rockcraft.yaml
+++ b/rockcraft.yaml
@@ -1,6 +1,6 @@
 name: sdcore-webui
 base: bare
-build-base: ubuntu:22.04
+build-base: ubuntu@22.04
 version: '1.3'
 summary: SD-Core webui
 description: SD-Core webui
@@ -21,3 +21,8 @@ parts:
       - libc6_libs
     organize:
       bin/cmd: bin/webui
+    override-pull: |
+      craftctl default
+      git apply ${CRAFT_PROJECT_DIR}/patches/01-bump-dependencies.patch
+      git apply ${CRAFT_PROJECT_DIR}/patches/02-add-subs-to-db-when-posted.patch
+      git apply ${CRAFT_PROJECT_DIR}/patches/03-fix-first-config-from-db.patch
