feat: adding craft version as a file
Creates a new part for storing the content of the craft version variable

--- a/rockcraft.yaml
+++ b/rockcraft.yaml
@@ -14,7 +14,7 @@ parts:
     plugin: go
     source: https://github.com/omec-project/webconsole.git
     source-type: git
-    source-tag: v1.4.1
+    source-tag: v${CRAFT_PROJECT_VERSION}
     build-snaps:
       - go/1.21/stable
     stage-packages:
@@ -22,3 +22,12 @@ parts:
       - base-files_lib
     organize:
       bin/cmd: bin/webui
+  version:
+    plugin: nil
+    override-build: |
+      mkdir -p ${CRAFT_PART_INSTALL}/etc/
+      echo ${CRAFT_PROJECT_VERSION} > ${CRAFT_PART_INSTALL}/etc/workload-version
+    organize:
+      "*": etc/
+    stage:
+      - etc/
